[package]
name        = "warp"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.75"
authors     = ["warp contributors"]
description = "Universal event engine: streaming, pub/sub, queues, webhooks — one binary"
license     = "Apache-2.0"
repository  = "https://github.com/eventide-rs/eventide"
keywords    = ["event-streaming", "pubsub", "message-queue", "kafka", "webhooks"]
categories  = ["network-programming", "asynchronous"]

[[bin]]
name = "eventide"
path = "src/main.rs"

[[bin]]
name = "evctl"
path = "src/ctl/main.rs"

[lib]
name = "eventide_core"
path = "src/lib.rs"

[[bench]]
name    = "throughput"
path    = "benches/throughput.rs"
harness = false

[dependencies]
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec", "io"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rmp-serde   = "1"
bytes       = "1"
memmap2     = "0.9"
crc32fast   = "1"
fs2         = "0.4"
hyper       = { version = "1", features = ["full"] }
hyper-util  = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls      = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap        = { version = "4", features = ["derive", "env"] }
toml        = "0.8"
figment     = { version = "0.10", features = ["toml", "env"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
metrics             = "0.23"
metrics-exporter-prometheus = "0.15"
wasmtime    = { version = "20", optional = true }
uuid        = { version = "1", features = ["v7"] }    # time-ordered event IDs
dashmap     = "6"
parking_lot = "0.12"
thiserror   = "1"
anyhow      = "1"
smallvec    = "1"

[dev-dependencies]
criterion   = { version = "0.5", features = ["html_reports"] }
tokio-test  = "0.4"
tempfile    = "3"
proptest    = "1"

[features]
default  = ["wasm-plugins"]
wasm-plugins = ["wasmtime"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.bench]
inherits  = "release"
strip     = "none"
debug     = true